# ifolder

./: ChangeLog  Ifloder  Makefile  Makefile.am  NovelliFolder.sh  README  autogen.sh  autogenall.sh  configure  configure.in  configure.pl  ifolder3-c.pc.in  ifolder3-clients.changes  ifolder3-linux.sh  ifolder3-ui.pc.in  ifolder3.pc.in  makeall.sh
addressbook/: Makefile.am  README  addressbook-ui.pc.in  addressbook.pc.in  autogen.sh  common.mk  configure.in  configure.pl
addressbook/doc/: Makefile.am
addressbook/package/: Makefile.am
addressbook/src/: Makefile  Makefile.am  configure.cmd  configure.pl  win32env.bat
bonjour/: Makefile.am  README  autogen.sh  bonjour.sln  configure.in
bonjour/package/: Makefile.am
bonjour/src/: Makefile.am
client/: .project  AUTHORS  INSTALL  Makefile.am  Makefile.mingw  README  autogen.sh  config.h.in  configure.in  makefiledefs.mingw  update-wsdl
client/doc/: Doxyfile.in  DoxyfileC.in  DoxyfileCpp.in  Makefile.am
client/ifolder-3.6.xcodeproj/: project.pbxproj
client/src/: Makefile.am
client/test/: Makefile.am
dependencies/: Makefile  Makefile.am  Makefile.in  make.out
dependencies/.deps/: asyncread.Plo  asyncscan.Plo  asyncwrite.Plo  close.Plo  closewtd.Plo  connect-linux.Plo  connect.Plo  conversion.Plo  convids.Plo  create.Plo  dummyzapi.Plo  exclude.Plo  fs_sidf.Plo  fs_trustee.Plo  fscreate.Plo  fsinterface.Plo  fsmisc.Plo  fsmodifyinfo.Plo  fsopen.Plo  fsread.Plo  fsscan.Plo  fsvfs_modifyinfo.Plo  fsvfs_sidf.Plo  fsvfs_trustee.Plo  fsvfscreate.Plo  fsvfsmisc.Plo  fsvfsopen.Plo  fsvfsread.Plo  fsvfsscan.Plo  fsvfswrite.Plo  fswrite.Plo  funpointer.Plo  incexc.Plo  linktab.Plo  lunicode.Plo  open.Plo  openwtd.Plo  osprimitives.Plo  resource.Plo  restore.Plo  (+18 more)
dependencies/fs/: fsinterface.h  funpointer.c  funpointer.h  smsmac.h
doc/: Makefile.am
gaim-ifolder/gifolder/: GaimDomainService.wsdl  Makefile.am  Makefile.mingw  buddy-profile.c  buddy-profile.h  event-handler.c  event-handler.h  gaim-domain.c  gaim-domain.h  gifolder.c  gifolder.h  gtk-simias-users.c  simias-invitation-store.c  simias-invitation-store.h  simias-messages.c  simias-messages.h  simias-prefs.c  simias-prefs.h  simias-users.h  simias-util.c  simias-util.h
gaim-ifolder/src/: Makefile.am
gnome-vfs-ifolder/: Makefile.am  README  autogen.sh  configure.in
gnome-vfs-ifolder/icons/: Makefile.am
gnome-vfs-ifolder/package/: Makefile.am  gnome-vfs-ifolder.spec.in
gnome-vfs-ifolder/src/: Makefile.am  ifolder-method.c  ifolder.conf  ifolders-method.c  ifolders.conf
help/: Makefile.am
help/cs/: accounts.html  accountsprefs.html  b9lvmk9.html  bawqmpe.html  bbbcabq.html  bctrxs4.html  bctryt7.html  benefits.html  bkjj1f9.html  bkmgmdj.html  coexistmig.html  conflicts.html  createifolder.html  delacct.html  deleting.html  firewall.html  ificons.html  legal.html  login.html  logout.html  managingpassphrse.html  merge.html  migration.html  movelocation.html  myifolders.html  ovwnext.html  ovwxplat.html  preferences.html  propifolders.html  reverting.html  startclient.html  stopclient.html  sync.html  virusscan.html
help/de/: accounts.html  bawqltp.html  bbb7rj2.html  bctrxs4.html  bctryt7.html  bkjj1f9.html  bkmgmdj.html  bookinfo.html  conflicts.html  delacct.html  deleting.html  ificons.html  ifquota.html  login.html  logout.html  managingpassphrse.html  migration.html  myifolders.html  nameconv.html  overview.html  preferences.html  propifolders.html  startclient.html  stopclient.html  sync.html  typeguide.html  viewhide.html
help/en/: accountdetails.html  accounts.html  accountsprefs.html  b9lvmk9.html  bawqltp.html  bawqmpe.html  bbb7rj2.html  bbbcabq.html  bctrxs4.html  bctryt7.html  benefits.html  bkjj1f9.html  bkmgmdj.html  bookinfo.html  coexistmig.html  conflicts.html  createifolder.html  delacct.html  deleting.html  firewall.html  ificons.html  ifquota.html  keyfeatures.html  legal.html  login.html  logout.html  managingpassphrse.html  migration.html  movelocation.html  nameconv.html  ovwnext.html  preferences.html  propifolders.html  reverting.html  setupifolder.html  sharewith.html  startclient.html  stopclient.html  sync.html  typeguide.html  (+2 more)
help/es/: accountdetails.html  accountsprefs.html  b9lvmk9.html  bawqltp.html  bbb7rj2.html  bctrxs4.html  benefits.html  bookinfo.html  coexistmig.html  delacct.html  deleting.html  ificons.html  keyfeatures.html  legal.html  locguide.html  logout.html  merge.html  movelocation.html  myifolders.html  overview.html  ovwnext.html  preferences.html  propifolders.html  sharewith.html  typeguide.html  viewhide.html  virusscan.html
help/fr/: accounts.html  accountsprefs.html  bawqltp.html  bawqmpe.html  bbb7rj2.html  bctrxs4.html  bctryt7.html  benefits.html  bkjj1f9.html  coexistmig.html  conflicts.html  createifolder.html  delacct.html  deleting.html  ificons.html  ifquota.html  index.html  legal.html  locguide.html  managingpassphrse.html  migration.html  movelocation.html  nameconv.html  ovwnext.html  reverting.html  startclient.html  stopclient.html  typeguide.html  virusscan.html
help/hu/: accountsprefs.html  bawqltp.html  (+23 more)
ifolder/: COPYING  Makefile.am  NEWS  README  README.build  autogen.sh  build-linux.sh  configure.in  ifolder-se-c.pc.in  ifolder.pc.in  ifolder3-c.pc.in  ifolder3-linux.sh  ifolder3.pc.in
ifolder-nautilus/: AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.in
nautilus-ifolder/: AUTHORS  ChangeLog  Makefile.am  autogen.sh  build-linux.sh  configure.in  nautilus-linux.sh
package/: Makefile.am
plugins/: ChangeLog  Makefile.am  README  autogen.sh  client-plugins.sh  configure.in  enterprise-plugins.sh  ifolder-enterprise-plugins.changes  ifolder3-client-plugins.sh  ifolder3-enterprise-plugins.sh
simias/: Makefile  Makefile.am  README  Simias.csproj  Simias.sln  SimiasLib.csproj  SimiasLib.sln  autogen.sh  common.mk  configure.cmd  configure.in  configure.pl  simias-client-c.pc.in  simias-client.pc.in  simias-event-client.pc.in  simias-ui.pc.in  simias.ndoc  simias.pc.in  test.mk  win32env.bat  win32env.lnk
src/: Makefile.am  win32env.bat
(+10249 files in other folders)
